--- a/example06-presentation/src/main/angular/src/app/app.component.html
+++ b/example06-presentation/src/main/angular/src/app/app.component.html
@@ -8,21 +8,17 @@
     max-width: 1366px;
   }
 </style>
-<div class="container-fluid">
-  <div class="row mb-3">
+<div class="container-fluid h-100">
+  <div class="row">
     <div class="col-12 p-0 topmenu">
         <nav class="navbar h-100 navbar-dark bg-dark navbar-expand-lg ">
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav text-center">
                 <a class="nav-item pr-3 pl-3 nav-link active" routerLink="/angular" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item pl-3 pr-3 nav-link" routerLink="/angular" routerLinkActive="active">Features</a>
-                <a class="nav-item pl-3 pr-3 nav-link" routerLink="/angular" routerLinkActive="active">Pricing</a>
               </div>
             </div>
           </nav>
     </div>
   </div>
-  <div class="mt-4">
-    <router-outlet></router-outlet>
-  </div>
+  <router-outlet></router-outlet>
 </div>
