--- a/example06-presentation/src/main/angular/src/app/angular/news-list/news-list.component.html
+++ b/example06-presentation/src/main/angular/src/app/angular/news-list/news-list.component.html
@@ -1,14 +1,30 @@
-<div class="alert alert-info" *ngIf="news.length == 0">
-  No news available
-</div>
-
-<div class="list-group" *ngIf="news.length > 0">
-  <div class="list-group-item d-flex flex-row" *ngFor="let n of reversedNews; let i = index" [class.list-group-item-primary]="i == 0">
-    <div class="w-100 mr-2">
-      <h6 class="mb-0">{{n.headline}} <span class="badge badge-primary" *ngIf="i == 0">Latest</span></h6>
-    </div>
-    <div class="flex-shrink-0">
-      <small>{{n.publishedOn | date:mediumDate}}</small>
-    </div>
+<style>
+  .list-group {
+    background-color: white;
+    height: calc(100% - 50px);
+    margin-top: 25px;
+    border-radius: 15px;
+  }
+  .list-group-item:first-child {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+  }
+</style>
+<div class="row h-100">
+  <div class="col-12">
+    <div class="alert alert-info" *ngIf="news.length == 0">
+        No news available
+      </div>
+      <div class="list-group" *ngIf="news.length > 0">
+        <div class="list-group-item d-flex flex-row" *ngFor="let n of reversedNews; let i = index" [class.list-group-item-primary]="i == 0">
+          <div class="w-100 mr-2">
+            <h6 class="mb-0">{{n.headline}} <span class="" *ngIf="i == 0">Latest</span></h6>
+          </div>
+          <div class="flex-shrink-0">
+            <small>{{n.publishedOn | date:mediumDate}}</small>
+          </div>
+        </div>
+      </div>
   </div>
 </div>
+    
