--- a/example06-presentation/src/main/angular/src/app/app.component.html
+++ b/example06-presentation/src/main/angular/src/app/app.component.html
@@ -15,6 +15,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav text-center">
                 <a class="nav-item pr-3 pl-3 nav-link active" routerLink="/angular" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item pl-3 pr-3 nav-link" routerLink="/login" routerLinkActive="active">Login</a>
               </div>
             </div>
           </nav>
