added registration route

--- a/example06-presentation/src/main/angular/src/app/app.component.html
+++ b/example06-presentation/src/main/angular/src/app/app.component.html
@@ -16,6 +16,7 @@
               <div class="navbar-nav text-center">
                 <a class="nav-item pr-3 pl-3 nav-link active" routerLink="/angular" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item pl-3 pr-3 nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+                <a class="nav-item pl-3 pr-3 nav-link" routerLink="/registration" routerLinkActive="active">Registration</a>
               </div>
             </div>
           </nav>
