--- a/example06-presentation/src/main/angular/src/app/login/login.component.html
+++ b/example06-presentation/src/main/angular/src/app/login/login.component.html
@@ -9,14 +9,14 @@
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="username">
+						<input type="text" class="form-control" placeholder="username" required>
 						
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" placeholder="password">
+						<input type="password" class="form-control" placeholder="password" required>
 					</div>
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
@@ -27,9 +27,9 @@
 				</form>
 			</div>
 			<div class="card-footer">
-				<div class="d-flex justify-content-center links">
-					Du hast noch keinen Account?<a href="#">Registrieren</a>
+				<div class="d-flex justify-content-left links">
+					You do not have an account?<a routerLink="/registration">Register now</a>
 				</div>
-			</div>
+			</div>			
 		</div>
 	</div>
