--- a/example06-presentation/src/main/angular/src/app/registration/registration.component.html
+++ b/example06-presentation/src/main/angular/src/app/registration/registration.component.html
@@ -5,56 +5,54 @@
 			</div>
 			<div class="card-body">
 				<form>
-					<table>
-					<tr>
-					<td>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text">Firstname</span>
-						</div>
-						<input type="text" class="form-control">&nbsp;						
-					</div>
-					</td>
-					<td>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text">Lastname</span>
-						</div>
-						<input type="text" class="form-control">
-					</div>
-					</td>
-					</tr>
-					<td colspan="2"><hr></td>
-					<tr>
-					<td colspan="2">
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-at">&nbsp; Email</i></span>
-						</div>
-						<input type="text" class="form-control">						
-					</div>
-					</td>
-					</tr>
-					<td colspan="2"><hr></td>
-					<tr>
-					<td>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-user">&nbsp; Username</i></span>
-						</div>
-						<input type="text" class="form-control">&nbsp;						
-					</div>
-					</td>
-					<td>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="fas fa-key">&nbsp; Password</i></span>
-						</div>
-						<input type="password" class="form-control">
-					</div>
-					</tr>
-					&nbsp;
-					</table>
+          <div class="form-row">
+            <div class="col-6">
+              <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">Firstname</span>
+                  </div>
+                  <input type="text" class="form-control">&nbsp;						
+                </div>
+            </div>
+            <div class="col-6">
+              <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">Lastname</span>
+                  </div>
+                  <input type="text" class="form-control">
+                </div>
+            </div>
+          </div>
+          <hr>
+          <div class="form-row">
+            <div class="col-12">
+                <div class="input-group form-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="fas fa-at">&nbsp; Email</i></span>
+                  </div>
+                  <input type="text" class="form-control">						
+                </div>
+            </div>
+          </div>
+          <hr>
+          <div class="form-row">
+            <div class="col-6">
+              <div class="input-group form-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-user">&nbsp; Username</i></span>
+                </div>
+                <input type="text" class="form-control">&nbsp;						
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="input-group form-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-key">&nbsp; Password</i></span>
+                </div>
+                <input type="password" class="form-control">
+              </div>
+            </div>
+          </div>
 					<div class="form-group">
 						<input type="submit" value="Register" class="btn float-right login_btn">
 					</div>
