--- a/example06-presentation/src/main/angular/src/app/registration/registration.component.html
+++ b/example06-presentation/src/main/angular/src/app/registration/registration.component.html
@@ -9,7 +9,7 @@
             <div class="col-6">
               <div class="input-group form-group">
                   <div class="input-group-prepend">
-                    <span class="input-group-text">Firstname</span>
+                    <span class="input-group-text"><i class="fas fa-user">&nbsp; First name</i></span>
                   </div>
                   <input type="text" class="form-control">&nbsp;						
                 </div>
@@ -17,7 +17,7 @@
             <div class="col-6">
               <div class="input-group form-group">
                   <div class="input-group-prepend">
-                    <span class="input-group-text">Lastname</span>
+                    <span class="input-group-text"><i class="fas fa-user">&nbsp; Last name</i></span>
                   </div>
                   <input type="text" class="form-control">
                 </div>
@@ -53,7 +53,7 @@
               </div>
             </div>
           </div>
-					<div class="form-group">
+					<div class="form-group mt-3">
 						<input type="submit" value="Register" class="btn float-right login_btn">
 					</div>
 				</form>
