registration & login frontend functions

--- a/example06-presentation/src/main/angular/src/app/login/login.component.html
+++ b/example06-presentation/src/main/angular/src/app/login/login.component.html
@@ -4,19 +4,19 @@
 				<h3>Login</h3>
 			</div>
 			<div class="card-body">
-				<form>
+				<form (submit)="login($event)">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
 						</div>
-						<input type="text" class="form-control" placeholder="username" required>
+						<input [(ngModel)]="username" name="username" type="text" class="form-control" placeholder="username" required>
 						
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" placeholder="password" required>
+						<input [(ngModel)]="password" name="password" type="password" class="form-control" placeholder="password" required>
 					</div>
 					<div class="row align-items-center remember">
 						<input type="checkbox">Remember Me
