--- a/example06-presentation/src/main/angular/src/app/registration/registration.component.html
+++ b/example06-presentation/src/main/angular/src/app/registration/registration.component.html
@@ -4,14 +4,14 @@
 				<h3>Registration</h3>
 			</div>
 			<div class="card-body">
-				<form>
+				<form (submit)="register($event)">
           <div class="form-row">
             <div class="col-6">
               <div class="input-group form-group">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fas fa-user">&nbsp; First name</i></span>
                   </div>
-                  <input type="text" class="form-control">&nbsp;						
+                  <input name="firstname" [(ngModel)]="firstname" type="text" class="form-control">&nbsp;						
                 </div>
             </div>
             <div class="col-6">
@@ -19,7 +19,7 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fas fa-user">&nbsp; Last name</i></span>
                   </div>
-                  <input type="text" class="form-control">
+                  <input name="lastname" [(ngModel)]="lastname" type="text" class="form-control">
                 </div>
             </div>
           </div>
@@ -30,7 +30,7 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fas fa-at">&nbsp; Email</i></span>
                   </div>
-                  <input type="text" class="form-control">						
+                  <input name="email" [(ngModel)]="email" type="text" class="form-control">						
                 </div>
             </div>
           </div>
@@ -41,7 +41,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-user">&nbsp; Username</i></span>
                 </div>
-                <input type="text" class="form-control">&nbsp;						
+                <input name="username" [(ngModel)]="username" type="text" class="form-control">&nbsp;						
               </div>
             </div>
             <div class="col-6">
@@ -49,7 +49,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-key">&nbsp; Password</i></span>
                 </div>
-                <input type="password" class="form-control">
+                <input name="password" [(ngModel)]="password" type="password" class="form-control">
               </div>
             </div>
           </div>
