salt weg & Content wird jetzt gezeigt!

--- a/example06-presentation/src/main/angular/src/app/angular/news-details/news-details.component.html
+++ b/example06-presentation/src/main/angular/src/app/angular/news-details/news-details.component.html
@@ -9,7 +9,7 @@
   <div class="mt-2">
     <h5>{{news.headline}}</h5>
     <div [innerHTML]="getTrustedHtml(news.content)" *ngIf="allowHtmlContent"></div>
-    <div *ngIf="!allowHtmlContent">
+    <div>
       {{news.content}}
     </div>
   </div>
