--- a/example06-presentation/src/main/angular/src/app/angular/news-list/news-list.component.html
+++ b/example06-presentation/src/main/angular/src/app/angular/news-list/news-list.component.html
@@ -9,6 +9,14 @@
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
   }
+  .content {
+    background-color: #e6f2ff;
+  	width: 710px;
+  	border: 1px solid white;
+  	padding: 10px;
+  	margin: 20px;
+  	word-wrap: break-word;
+  }  
 </style>
 <div class="row h-100">
   <div class="col-12">
@@ -19,6 +27,7 @@
         <div class="list-group-item d-flex flex-row" *ngFor="let n of reversedNews; let i = index" [class.list-group-item-primary]="i == 0">
           <div class="w-100 mr-2">
             <h6 class="mb-0">{{n.headline}} <span class="" *ngIf="i == 0">Latest</span></h6>
+            <div class ="content"> <p style="position:relative;" >{{n.content}}</p> </div>
           </div>
           <div class="flex-shrink-0">
             <small>{{n.publishedOn | date:mediumDate}}</small>
