--- a/example06-presentation/src/main/angular/src/app/app.component.html
+++ b/example06-presentation/src/main/angular/src/app/app.component.html
@@ -14,8 +14,8 @@
         <nav class="navbar h-100 navbar-dark bg-dark navbar-expand-lg ">
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav text-center">
-                <a class="nav-item pr-3 pl-3 nav-link active" routerLink="/angular" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item pl-3 pr-3 nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+                <a class="nav-item pr-3 pl-3 nav-link" routerLink="/angular" routerLinkActive="active">Home</a>
+                <a class="nav-item pl-3 pr-3 nav-link active" routerLink="/login" routerLinkActive="active">Login <span class="sr-only">(current)</span></a>
                 <a class="nav-item pl-3 pr-3 nav-link" routerLink="/registration" routerLinkActive="active">Registration</a>
               </div>
             </div>
