--- a/example06-presentation/src/main/angular/src/app/angular/create-news/create-news.component.html
+++ b/example06-presentation/src/main/angular/src/app/angular/create-news/create-news.component.html
@@ -19,12 +19,12 @@
         
             <form (submit)="createNews($event)">
               <div class="form-group">
-                <label>Headline</label>
+                <label>Your Name</label>
                 <input name="headline" class="form-control" type="text" required [(ngModel)]="headline">
               </div>
               <div class="form-group">
                 <label>Content <span [ngClass]="getCharsLeft() < 0 ? 'text-danger' : 'text-muted'">({{getCharsLeft()}})</span></label>
-                <textarea name="content" class="form-control" required [(ngModel)]="content" placeholder="Type your message here.."></textarea>
+                <textarea name="content" rows="4" class="form-control" required [(ngModel)]="content" placeholder="Type your message here.."></textarea>
               </div>
               <button class="btn btn-block btn-outline-primary" [disabled]="getCharsLeft() < 0">Create News</button>
             </form>
