login & registration verbessert

--- a/example06-presentation/src/main/angular/src/styles.sass
+++ b/example06-presentation/src/main/angular/src/styles.sass
@@ -4,3 +4,9 @@
 
 html
   font-size: .875rem
+
+.ng-invalid:not(form)
+  border-left: 4px solid red
+
+.ng-valid:not(form)
+  border-left: 4px solid green
