--- a/example06-presentation/src/main/angular/src/app/login/login.component.html
+++ b/example06-presentation/src/main/angular/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 				<h3>Login</h3>
 			</div>
 			<div class="card-body">
-				<form (submit)="login($event)">
+				<form #loginForm="ngForm" (submit)="login($event)">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
@@ -22,7 +22,7 @@
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-						<input type="submit" value="Login" class="btn float-right login_btn">
+						<input type="submit" value="Login" class="btn float-right login_btn" [disabled]="!loginForm.valid">
 					</div>
 				</form>
 			</div>
