--- a/example06-presentation/src/main/angular/src/app/angular/news-list/news-list.component.html
+++ b/example06-presentation/src/main/angular/src/app/angular/news-list/news-list.component.html
@@ -52,7 +52,7 @@
 					<table>
 						<tr>
 							<h6 class="mb-0">{{n.headline}}</h6>
-							<span  class="buttons">
+							<span class="buttons" *ngIf="n.headline == currentUser()">
 								<button (click)="deleteNews(n.id)" class="btn"><i class="fa fa-trash"></i></button >
 								<button class="btn"><i class="fa fa-edit"></i></button >            
 							</span> 
