edit (one more step..)

--- a/example06-presentation/src/main/angular/src/app/angular/news-list/news-list.component.html
+++ b/example06-presentation/src/main/angular/src/app/angular/news-list/news-list.component.html
@@ -70,9 +70,11 @@ textarea {
 							</span> 
 						</tr>
 						<tr><div class ="content" *ngIf="!onEdit"> {{n.content}} </div></tr> 
-						<div class ="content" *ngIf="onEdit">
-							<textarea name="content" rows="2" class="form-control" required>{{n.content}}</textarea>									
-							<button (click)="saveChanges()" class="btn"><i class="fa fa-save"></i></button >    
+						<div class ="content" *ngIf="onEdit && n.id == editId">
+							<form (submit)="saveChanges($event)">
+								<textarea name="content" rows="2" class="form-control" required >{{n.content}}</textarea>									
+								<button type="submit" class="btn"><i class="fa fa-save"></i></button >    
+							</form>	
 						</div>
 						<tr><small>{{n.publishedOn | date:mediumDate}}</small></tr>
 					</table>
