making links clearer

--- a/example06-presentation/src/main/angular/src/app/login/login.component.html
+++ b/example06-presentation/src/main/angular/src/app/login/login.component.html
@@ -28,7 +28,7 @@
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-left links">
-					You do not have an account?<a routerLink="/registration">Register now</a>
+					You do not have an account?<a routerLink="/registration"><span style="color:#78d4ff">Register now</span></a>
 				</div>
 			</div>			
 		</div>
