--- a/example06-presentation/src/main/angular/src/app/registration/registration.component.html
+++ b/example06-presentation/src/main/angular/src/app/registration/registration.component.html
@@ -60,7 +60,7 @@
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-left links">
-					Already registred?<a routerLink="/login">Login</a>
+					Already registred?<a routerLink="/login"><span style="color:#78d4ff">Login now</span></a>
 				</div>
 			</div>			
 		</div>
