--- a/example06-presentation/src/main/angular/src/app/registration/registration.component.html
+++ b/example06-presentation/src/main/angular/src/app/registration/registration.component.html
@@ -55,7 +55,10 @@
           </div>
 					<div class="form-group mt-3">
 						<input type="submit" value="Sign up" class="btn float-right login_btn" [disabled]="!loginForm.valid">
-					</div>
+					</div><br>
+					<p style="color:#fc4e4e;white-space: pre-wrap">
+						<b>{{errors}}</b>
+					</p>
 				</form>
 			</div>
 			<div class="card-footer">
