--- a/example06-presentation/src/main/angular/src/app/angular/news-list/news-list.component.html
+++ b/example06-presentation/src/main/angular/src/app/angular/news-list/news-list.component.html
@@ -49,9 +49,37 @@ textarea {
 
     resize: none; /*remove the resize handle on the bottom right*/
 }
+
+#style-7 {
+  overflow-y: scroll;
+}
+#style-7::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+#style-7::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+#style-7::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgb(122,153,217)),
+									   color-stop(0.72, rgb(73,125,189)),
+									   color-stop(0.86, rgb(28,58,148)));
+}
+
   
 </style>
-<div class="row h-100">
+<div class="row h-100" id="style-7">
   <div class="col-12">
     <div class="alert alert-info" *ngIf="news.length == 0">
         No news available
